<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_menu"
    android:orientation="vertical"
    android:weightSum="9" >

    <View
        style="@style/lineStyle"
        android:layout_marginTop="@dimen/y5" />

    <LinearLayout
        android:id="@+id/layout_connect"
        style="@style/left_operator_layout_style"
        android:background="@drawable/white" >

        <ImageView
            style="@style/left_operator_img_style"
            android:src="@drawable/conn" />

        <TextView
            android:id="@+id/btn_connect"
            style="@style/left_operator_btn_style"
            android:text="@string/connect" />
    </LinearLayout>

    <View style="@style/lineStyle" />

    <LinearLayout
        android:id="@+id/layout_IcCard"
        style="@style/left_operator_layout_style" >

        <ImageView
            style="@style/left_operator_img_style"
            android:src="@drawable/ic_card" />

        <TextView
            android:id="@+id/btn_IcCard"
            style="@style/left_operator_btn_style"
            android:text="@string/icCard" />
    </LinearLayout>

    <View style="@style/lineStyle" />

    <LinearLayout
        android:id="@+id/layout_idCard"
        style="@style/left_operator_layout_style" >

        <ImageView
            style="@style/left_operator_img_style"
            android:src="@drawable/id_card" />

        <TextView
            android:id="@+id/btn_idCard"
            style="@style/left_operator_btn_style"
            android:text="@string/idCard" />
    </LinearLayout>

    <View style="@style/lineStyle" />

    <LinearLayout
        android:id="@+id/layout_finger"
        style="@style/left_operator_layout_style" >

        <ImageView
            style="@style/left_operator_img_style"
            android:src="@drawable/finger" />

        <TextView
            android:id="@+id/btn_finger"
            style="@style/left_operator_btn_style"
            android:text="@string/zhiwenyi" />
    </LinearLayout>

    <View style="@style/lineStyle" />

    <LinearLayout
        android:id="@+id/layout_MsgCard"
        style="@style/left_operator_layout_style" >

        <ImageView
            style="@style/left_operator_img_style"
            android:src="@drawable/msg_card" />

        <TextView
            android:id="@+id/btn_Msg_card"
            style="@style/left_operator_btn_style"
            android:text="@string/MsgCard" />
    </LinearLayout>

    <View style="@style/lineStyle" />

    <LinearLayout
        android:id="@+id/layout_handwrite"
        style="@style/left_operator_layout_style" >

        <ImageView
            style="@style/left_operator_img_style"
            android:src="@drawable/elec_tag" />

        <TextView
            android:id="@+id/btn_handwrite"
            style="@style/left_operator_btn_style"
            android:text="@string/handWrite" />
    </LinearLayout>

    <View style="@style/lineStyle" />

    <LinearLayout
        android:id="@+id/layout_key"
        style="@style/left_operator_layout_style" >

        <ImageView
            style="@style/left_operator_img_style"
            android:src="@drawable/pin_num" />

        <TextView
            android:id="@+id/btn_key"
            style="@style/left_operator_btn_style"
            android:text="@string/key" />
    </LinearLayout>

    <View style="@style/lineStyle" />

</LinearLayout>