<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical" >
    
    <TableLayout 
	android:id="@+id/tablelayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
 >
    
	<TableRow android:padding="5dp" >
        <TextView
            style="@style/pin_text_style"
            android:text="加密方式:"
 />
        <Spinner 
            android:id="@+id/spinner_pin_des"
			style="@style/pin_edit_style1"
            android:background="@drawable/rounded_editbtn_states"
          />
        
        <TextView
           style="@style/pin_text_style"
            android:text="密码次数:"
     />
        
        <Spinner 
            android:id="@+id/passTimes"
			style="@style/pin_edit_style1"
            android:background="@drawable/rounded_editbtn_states"
         />        
    </TableRow>  
	<TableRow android:padding="5dp" >
        <TextView
          style="@style/pin_text_style"
            android:text="密码长度:"
      />
       <EditText
            android:id="@+id/passLength"
            android:inputType="number"
            android:text="0"
		  style="@style/pin_edit_style1">
        </EditText>
        
        <TextView
            style="@style/pin_text_style"
            android:text="超时时间:"
   />
        
       <EditText
            android:id="@+id/timeout"
            android:inputType="number"
            android:text="20"
		style="@style/pin_edit_style1">
        </EditText>        
    </TableRow>  
         	   
    <TableRow android:padding="5dp"
        	  android:id="@+id/keysRow"
        	  android:visibility="gone">
    	<TextView
           style="@style/pin_text_style"
            android:text="密钥:"
     />        
    	<EditText
            android:id="@+id/passKeys"

     		 style="@style/pin_edit_style1"
      >
        </EditText>
    </TableRow>     
    
      <TableRow
           android:layout_marginTop="20dp"
        	>
    	<TextView
           style="@style/pin_text_style"
          android:text="@string/mingWen"
     />        
    	
         <TextView
            android:id="@+id/TV_Password"
		   style="@style/pin_edit_style1"
		   android:layout_height="wrap_content"/>
    </TableRow>     
    </TableLayout>
 
   
     <Button
                android:layout_marginTop="@dimen/comm_marginTop"
                android:layout_marginLeft="120dp"
                android:id="@+id/bt_readKeyPad"
                android:layout_marginBottom="10dp"
                style="@style/smallButton"
                android:text="@string/readPassword" />
     
      <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
         android:orientation="vertical"
         android:visibility="gone"
		         
         >
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal"
		 android:visibility="gone"        
         >
         <TextView
           style="@style/pin_text_style"
          android:text="@string/miyao1"
     	/>      
         <EditText
            android:id="@+id/et_miyao1"
     		 style="@style/pin_edit_style1"
     		 android:text="1111111"
      />
     </LinearLayout>
     
        <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:visibility="gone"
		         
         >
         <TextView
           style="@style/pin_text_style"
          android:text="@string/miyao2"
     	/>      
         <EditText
            android:id="@+id/et_miyao2"
     		 style="@style/pin_edit_style1"
     		 android:text="11111111"
      />
     </LinearLayout>
     
           <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:visibility="gone"
		         
         >
         <TextView
           style="@style/pin_text_style"
          android:text="@string/miyao3"
     	/>      
         <EditText
            android:id="@+id/et_miyao3"
     		 style="@style/pin_edit_style1"
     		 android:text="2222222"
      />
         </LinearLayout>
         
           
             <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
         android:orientation="horizontal"
		 android:visibility="gone"        
         >
         <TextView
           style="@style/pin_text_style"
          android:text="结果:"
     	/>      
         <EditText
            android:id="@+id/et_state"
     		 style="@style/pin_edit_style1"
     		 
      />
     </LinearLayout>
     
           <Button
                android:layout_marginTop="@dimen/comm_marginTop"
                android:layout_marginLeft="120dp"
                android:visibility="gone"
                android:id="@+id/bt_keyAffusePin"
                style="@style/smallButton"
                android:text="@string/keyAffusePin" />
          </LinearLayout>
     
</LinearLayout>